# galaiko.rocks

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.txt  build.rs  config.toml  fly.toml  init-wrapper  j2_customize.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  svelte.config.js  tailwind.config.cjs  toolchain.toml  tsconfig.json  vercel.json  vite.config.js  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeball.yml  codeql-analysis.yml  create-comment.yaml  daily.yaml  deploy.yaml  download-analytics.yaml  download-webmentions.yaml  movies.yaml  records.yaml  restaurants_and_cafes.yaml  updates.yaml
assets/: cv.typ  index.css  index.md  now.md  privacy.md  uses.html  uses.md
assets/blogroll/: index.md  index.opml
assets/cocktails/: 12 Mile Limit.cook  12-mile-limit.cook  12_mile_limit.cook  Artillery.cook  Aviation.cook  Banana Daiquiri.cook  Bees Knees.cook  Bijou Cocktail.cook  Brooklyn.cook  Clover Club.cook  Corpse Reviver No.2.cook  Cubanada.cook  Daiquiri.cook  East Side.cook  Espresso Vodka Martini.cook  Fitzgerald.cook  French 75.cook  Gimlet.cook  Gin And Tonic.cook  Hemingway Daiquiri.cook  Manhattan.cook  Margarita.cook  Martinez.cook  Martini.cook  Negroni.cook  Paper Plane.cook  Pegu Club.cook  Piña Colada.cook  The Dorchester.cook  The Green Mile.cook  The Ideal Cocktail.cook  The Last Word.cook  The Sidecar.cook  The Siesta.cook  The Vesper.cook  Whiskey Sour.cook  White Russian.cook  artillery.cook  aviation.cook  banana-daiquiri.cook  (+36 more)
assets/css/: dark.css  light.css  links.css  main.css  styles.css  tailwind.config.js
assets/fonts/: index.css
assets/js/: links.js
assets/keys/: nikita@galaiko.rocks.asc
assets/movies/: index.json
assets/not/: index.md
assets/places/: A43.json  AI Ramen.json  Alexandras Grekiska Soppkök.json  Amida.json  Aryam.json  Bar Centro.json  Bar Etzy.json  Belgobaren.json  Carl's Deli.json  D'abramo.json  Dirty Records.json  EDO Sushi.json  Evolushi.json  Falafelbaren - Götgatan.json  Falloumi.json  Fang Yuan Shi Wu.json  Franky's.json  Gansu Köket.json  Gelaterian Göteborg.json  Gourmetkorv.json  Günter's korvar.json  Hagabions Cafe.json  Haikyuu Sushi & Poke.json  Indio Kitchen.json  Indiska Källaren.json  Kajsas Fisk.json  Kastello.json  Kuro - Tbilisi.json  La Neta.json  Landvetters Stenugnsbageri.json  Lao Lao.json  Levinskys.json  Max.json  McDonald's.json  Mikkeller.json  Morgon Coffee Roasters.json  Nonna.json  Nooodle.json  Nordstan Kebab.json  Omnipollos Hatt.json  (+118 more)
assets/posts/: 2024-website-rewrite.md  comments.md  daily-apps-2023.md  dcp-1.md  dcp-15.md  dcp-2.md  dcp-23.md  dcp-3.md  dcp-4.md  dcp-5.md  dcp-7.md  dcp-boring.md  dcp.md  docker-compose.md  fixed-gear-vim.md  from-hledger-to-ledger.md  go-data-race.md  go-interface.md  haircut.md  indieweb.md  internet-privacy.md  optimizing-go.md  p2p.md  programming-metaphor.md  rpi-cluster.md  rpi-k8s.md  sverige-news.md  tracking.md  vim.md  words-count.md
assets/pyramid-schemes/: index.md
assets/recipes/: basque-cheesecake.cook  borscht.cook  (+21 more)
content/: _index.md  about.md
convert/: Cargo.toml
convert/src/: lib.rs  main.rs
convert/src/render/: atom.rs  html.rs
crates/update/: Cargo.toml
crates/update/src/: discogs.rs  hledger.rs  letterboxd.rs  main.rs
data/: records.json  restaurants_and_cafes.json
filters/: fix_images.lua  fix_links.lua  plaintext_style.lua
layouts/: 404.html  index.html
lib/: Cargo.toml
plugins/: rollup-plugin-cooklang.js  rollup-plugin-cooklang.ts  vite-plugin-b64.ts  vite-plugin-raw-fonts.ts
public/: index.xml  site.webmanifest  sitemap.xml
rewrite/: Cargo.toml  TODO.txt
rewrite/assets/: index.md  now.md  uses.md
rewrite/assets/pages/posts/blog/: docker-compose-server-manegement.md  go-data-races.md  my-default-apps-at-the-end-of-2023.md  no-more-tracking.md  raspberry-k8s.md  words-count.md
rewrite/assets/pages/posts/blog/cluster/: index.md
rewrite/assets/pages/posts/blog/half-a-year-with-vim/: index.md
rewrite/assets/pages/posts/blog/optimizing-functions/: index.md
rewrite/assets/pages/posts/dcp/: boring.md  probability.md  problem-2.md  problem-3.md  problem-5.md  problem-7.md
rewrite/assets/posts/blog/: Words count.md  comments.md  go-data-races.md  hello-indieweb.md  interface-wrapper.md  my-default-apps-at-the-end-of-2023.md  my-ideal-haircut.md  no-more-tracking.md  raspberry-k8s.md
rewrite/assets/posts/blog/Internet privacy starter pack/: index.md
rewrite/assets/posts/blog/Selfhosted RaspberryPI based Docker Swarm Cluster/: index.md
rewrite/assets/posts/blog/cluster/: index.md
rewrite/assets/posts/blog/optimizing-functions/: index.md
rewrite/assets/posts/blog/peer-to-peer/: index.md
rewrite/assets/posts/blog/privacy/: index.md
rewrite/assets/posts/dcp/: Daily Coding Problem: Problem #1.md  boring.md  intro.md  probability.md  problem-1.md  problem-3.md  problem-4.md  problem-7.md
rewrite/assets/posts/dcp/maze/: index.md
rewrite/src/: assets.rs  main.rs  pages.rs
rewrite/src/pages/: markdown.rs  posts.rs
scripts/: convert_md.sh  jinja.py  setup_deps.sh  utils.ts
serve/: Cargo.toml  build.rs
serve/src/: main.rs
shared/: Cargo.toml
shared/src/: assets.rs  lib.rs  pages.rs  parse.rs  types.rs
shared/src/pages/: atom.rs  html.rs
shared/src/parse/: cooklang.rs  frontmatter.rs  markdown.rs
shared/src/render/: atom.rs  html.rs
shared/src/types/: cocktails.rs  entries.rs  generated.rs  images.rs  movies.rs  places.rs  records.rs  restaurands_and_cafes.rs
src/: app.css  app.d.ts  app.html  assets.rs  build.rs  cocktails.rs  cooklang.rs  generated.rs  main.rs  markdown.rs  movies.rs  pages.rs  parse.rs  path.rs  posts.rs  public.rs  records.rs  restaurands_and_cafes.rs  routes.rs  serve.rs  update.rs
static/: site.webmanifest
templates/: _layout.html.jinja
types/: Cargo.toml
types/src/: path.rs
types/src/parse/: cooklang.rs
update/: Cargo.toml
update/src/: discogs.rs  hledger.rs  letterboxd.rs  main.rs
(+1774 files in other folders)
