[workspace]
members = [
    "crates/convert",
    "crates/serve",
    "crates/types",
    "crates/update",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
debug = false
