[package]
name = "convert"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread", "fs", "sync"] }
image = "0.24"
rayon = "1.8"
tracing-subscriber = "0.3"
tracing = "0.1"
