[package]
name = "convert"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
maud = "0.26"
atom_syndication = "0.12"
cooklang = "0.13"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread", "fs", "sync"] }
image = "0.24"
rayon = "1.8"
tracing-subscriber = "0.3"
tracing = "0.1"
