[package]
name = "www"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
debug = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"
restrictions = "deny"

[dependencies]
mime_guess = "2.0.4"
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", branch = "master", features = [ "include-exclude" ] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
maud = "0.25.0"
pulldown-cmark = "0.9.3"
