[package]
name = "www"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
debug = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"
restrictions = "deny"

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
maud = "0.25.0"
pulldown-cmark = "0.9.3"
rust-embed = { version = "8.1.0", features = [ "include-exclude", "mime-guess" ] }
tokio = { version = "1", features = [ "full" ] }
urlencoding = "2.1.3"
warp = "0.3.6"
