[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[build-dependencies]
shared = { path = "../shared" }
rust-embed = { version = "8.1.0", features = ["include-exclude"] }

[dependencies]
shared = { path = "../shared" }
rust-embed = { version = "8.1.0", features = ["include-exclude"] }
urlencoding = "2.1.3"
clap = { version = "4.4.11", features = ["derive"] }
mime_guess = "2.0.4"
axum = "0.7.4"
smol-macros = "0.1.0"
async-io = "2.3.1"
macro_rules_attribute = "0.2.0"
smol-axum = "0.1.0"
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
