[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[build-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
convert = { path = "../convert" }

[dependencies]
shared = { path = "../shared" }
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
urlencoding = "2.1.3"
clap = { version = "4.4.11", features = ["derive"] }
mime_guess = "2.0.4"
axum = "0.7.4"
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
