[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
maud = "0.25.0"
pulldown-cmark = "0.9.3"
serde = "1.0.195"
serde_yaml = "0.9.27"
cooklang = { git = "https://github.com/cooklang/cooklang-rs.git", branch = "main" }
once_cell = "1.19.0"
serde_json = "1.0.108"
atom_syndication = "0.12.2"
