[package]
name = "types"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
serde = "1.0"
serde_yaml = "0.9"
cooklang = "0.13"
once_cell = "1.19"
serde_json = "1.0"
image = { version = "0.24", features = ["webp", "jpeg", "png"] }
webp = "0.2"
