[package]
name = "update"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
async-std = { version = "1.12.0", features = ["default", "attributes"] }
femme = "2.2.1"
once_cell = "1.19.0"
clap = { version = "4.4.11", features = ["derive"] }
select = "0.6.0"
surf = "2.3.2"
serde = "1.0.195"
serde_json = "1.0.108"
chrono = "0.4.31"
csv = "1.3.0"
maud = "0.25.0"
