[package]
name = "update"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
shared = { path = "../shared" }
once_cell = "1.19.0"
clap = { version = "4.4.11", features = ["derive"] }
select = "0.6.0"
serde = "1.0.193"
serde_json = "1.0.108"
chrono = "0.4.31"
csv = "1.3.0"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["macros", "fs", "time", "rt-multi-thread"] }
