[package]
name = "update"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
types = { path = "../types" }
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
select = "0.6"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
csv = "1.3"
reqwest = "0.12"
tokio = { version = "1.36", features = ["macros", "fs", "time", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
